deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: hello-world
  labels:
    app: hello-world
spec:
  selector:
    app: hello-world
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
