deploy/ingress_backup.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo
  name: hello-world
  labels:
    app: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello-world.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world
              port:
                number: 8080
